# oneTBB

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  README.md  RELEASE_NOTES.md  SYSTEM_REQUIREMENTS.md  VERSIONING.md  bench_aggregating_task_group.cpp  bench_aggregating_task_group_new.cpp  flake.nix  generate_report.sh  genindex.html  index.html  objects.inv  onetbb.natvis  producer_consumer_bench.cpp  search.html  searchindex.js  ymbol search logic.q
benchmark/algorithms/benchmark_sort/: CMakeLists.txt  benchmark_sort.cpp
benchmarks/: CMakeLists.txt  composable_scenarios.cpp
benchmarks/synthetic/: CMakeLists.txt  composable_scenarios.cpp  ubench_concurrent.cpp  ubench_constrained.cpp  ubench_nested.cpp  ubench_perfect_nested.cpp  ubench_sequenced.cpp
benchmarks/synthetic/common/: concurrent.h  executors.h  math_utils.h  nested.h  sequence.h  utils.h
benchmarks/tbb_examples/: CMakeLists.txt
cmake/post_install/: CMakeLists.txt
doc/main/examples_testing/: CMakeLists.txt
examples/graph/resource_perf/: CMakeLists.txt  analyze_benchmarks.py  analyze_results.py  baseline_cycle_bench.cpp  benchmark_common.h  chain_bench.cpp  dining_philosophers_bench.cpp  genie_bench.cpp  genie_diamond_bench.cpp  resource_limited_ubenches.cpp  run_benchmarks.py  siblings_bench.cpp  tree_bench.cpp
examples/perf/fib_cutoff/: CMakeLists.txt  fibonacci_impl_emu.cpp  fibonacci_impl_tasks.cpp  fibonacci_impl_tbb.cpp  time_fibonacci_cutoff.cpp
examples/perf/perf_sched/: CMakeLists.txt  perf.cpp  perf.h  perf_sched.cpp
examples/sycl/tbb-resumable-tasks-sycl/: CMakeLists.txt  README.md
new_examples/: CMakeLists.txt
new_examples/graph/: graph_limiting_messages.cpp
new_examples/intro/: intro_pi.cpp  intro_pi_timing.cpp
new_examples/migration/: migrate_priorities.cpp
new_examples/performance_tuning/: global_control_and_explicit_conflict.cpp  global_control_and_implicit_conflict.cpp  parallel_pipeline_timed.cpp  priorities_and_conflict.cpp  task_scheduler_observer.cpp
new_examples/tasks/: task_group_poor_scaling.cpp
src/: CMakeLists.txt  tcm.cpp  tcm.rc  tcm.rc.in  tcm_permit_rep.h  utils.h  version.cpp
src/linux/: cgroup_info.h
src/proto/: Makefile  bench_accessing.cpp  synchronizer.h  test_accessing.cpp
src/tbb/: CMakeLists.txt  allocator.cpp  arena.cpp  arena.h  arena_slot.cpp  arena_slot.h  assert_impl.h  cgroup_info.h  co_context.h  concurrent_monitor.h  dynamic_link.cpp  dynamic_link.h  global_control.cpp  governor.cpp  governor.h  load_tbbbind.cpp  mailbox.h  misc.cpp  misc.h  misc_ex.cpp  numa_allocation.cpp  parallel_pipeline.cpp  profiling.cpp  queuing_rw_mutex.cpp  scheduler_common.h  small_object_pool.cpp  task.cpp  task_aggregation.h  task_dispatcher.cpp  task_dispatcher.h  task_group_context.cpp  tbb.rc  tcm_adaptor.cpp  thread_data.h  thread_dispatcher.cpp  thread_dispatcher.h  waiters.h
src/tbbbind/: CMakeLists.txt  tbb_bind.cpp  tbb_bind.rc
src/tbbmalloc/: CMakeLists.txt  Customize.h  backend.cpp  backend.h  backref.cpp  frontend.cpp  large_objects.cpp  large_objects.h  tbbmalloc.cpp  tbbmalloc.rc  tbbmalloc_internal.h
src/tbbmalloc_proxy/: proxy.cpp  tbbmalloc_proxy.rc
src/tracing/: _callstack_tracer.h  _permit_tracer.h  _tracer.h  _tracing_utils.h
test/: CMakeLists.txt  basic_test_utils.h  common_tests.h  concurrency_utils.h  hwloc_test_utils.h  test_basic_apis.cpp  test_cgroup_support.cpp  test_constrained_requests.cpp  test_exceptions.h  test_fcfsc.cpp  test_fuzzing.cpp  test_premature_exit.cpp  test_rb.cpp  test_tcm_disabling.cpp  test_tcm_environment.cpp  test_tcm_version.cpp  test_thread_pool.h  test_utils.h
test/common/: common_arena_constraints.h  concepts_common.h  config.h  cpu_usertime.h  doctest.h  graph_utils.h  memory_usage.h  test.h  utils.h  utils_assert.h  utils_concurrency_limit.h
test/conformance/: conformance_arena_constraints.cpp  conformance_blocked_nd_range.cpp  conformance_blocked_range.cpp  conformance_concurrent_map.cpp  conformance_concurrent_set.cpp  conformance_flowgraph.h  conformance_function_node.cpp  conformance_global_control.cpp  conformance_join_node.cpp  conformance_resumable_tasks.cpp  conformance_sequencer_node.cpp  conformance_task_group.cpp  conformance_version.cpp
test/tbb/: stub_unsigned_lib.cpp  test_allocators.cpp  test_arena_constraints.cpp  test_async_node.cpp  test_blocked_range.cpp  test_bravo_mutex.cpp  test_buffer_node.cpp  test_cgroup_support.cpp  test_concurrent_hash_map.cpp  test_concurrent_map.cpp  test_concurrent_monitor.cpp  test_concurrent_queue.cpp  test_concurrent_queue_whitebox.cpp  test_concurrent_set.cpp  test_dynamic_link.cpp  test_eh_thread.cpp  test_environment_whitebox.cpp  test_flow_graph_whitebox.cpp  test_function_node.cpp  test_global_control.cpp  test_handle_perror.cpp  test_hw_concurrency.cpp  test_interleaved_vector.cpp  test_join_node.cpp  test_join_node_key_matching.cpp  test_multifunction_node.cpp  test_numa_allocation.cpp  test_numa_memory.cpp  test_openmp.cpp  test_overwrite_node.cpp  test_parallel_for.cpp  test_parallel_for_each.cpp  test_parallel_phase.cpp  test_parallel_sort.cpp  test_priority_queue_node.cpp  test_queue_node.cpp  test_resource_limited_node.cpp  test_semaphore.cpp  test_sequencer_node.cpp  test_split_node.cpp  (+13 more)
test/tbb/natvis/: main.cpp  (+5 more)
test/tbbmalloc/: test_malloc_compliance.cpp  test_malloc_lib_unload.cpp  test_malloc_overload.cpp  test_malloc_overload_disable.cpp  test_malloc_used_by_lib.cpp  test_malloc_whitebox.cpp  test_scalable_allocator.cpp
test_app/: CMakeLists.txt  test.cpp
thread_composability_manager/: CMakeLists.txt
thread_composability_manager/cmake/: generate_vars.cmake  vars_utils.cmake
thread_composability_manager/include/: tcm.h
thread_composability_manager/src/: CMakeLists.txt  tcm.cpp  tcm.rc.in  tcm_permit_rep.h
thread_composability_manager/test/: CMakeLists.txt  test_basic_apis.cpp  test_constrained_requests.cpp  test_exceptions.h  test_fuzzing.cpp  test_premature_exit.cpp  test_tcm_disabling.cpp  test_tcm_environment.cpp  test_tcm_version.cpp  test_utils.h
(+955 files in other folders)
